fix / изменил z-index

--- a/src/widgets/mainHeader/ui/style.scss
+++ b/src/widgets/mainHeader/ui/style.scss
@@ -9,7 +9,7 @@
   background-color: white;
   justify-content: space-between;
   align-items: center;
-  z-index: 2;
+  z-index: 10;
   &__logo {
     position: relative;
     z-index: 2;
